RESOLVED FIXED94308
[EFL][WK2] Getting unnecessary EINA_SAFETY_ON_NULL_RETURN_VAL warnings while page navigation
https://bugs.webkit.org/show_bug.cgi?id=94308
Summary [EFL][WK2] Getting unnecessary EINA_SAFETY_ON_NULL_RETURN_VAL warnings while...
Mikhail Pozdnyakov
Reported 2012-08-17 01:01:53 PDT
Getting following message while back-forward page navigation: ERR<17498>: /media/ssd/WebKit/Source/WebKit2/UIProcess/API/efl/ewk_back_forward_list.cpp:76 addItemToWrapperCache() safety check failed: wkItem == NULL The reason is that loadClient.didChangeBackForwardList callback is invoked with zero arguments which is valid case while page back-forward navigation and means basically that the back-froward list has changed but items were not added or deleted.
Attachments
patch (1.88 KB, patch)
2012-08-17 01:05 PDT, Mikhail Pozdnyakov
kenneth: review+
kenneth: commit-queue-
to be landed (1.96 KB, patch)
2012-08-17 01:31 PDT, Mikhail Pozdnyakov
no flags
Mikhail Pozdnyakov
Comment 1 2012-08-17 01:05:15 PDT
Chris Dumez
Comment 2 2012-08-17 01:14:07 PDT
Comment on attachment 159035 [details] patch LGTM.
Kenneth Rohde Christiansen
Comment 3 2012-08-17 01:23:56 PDT
Comment on attachment 159035 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=159035&action=review > Source/WebKit2/UIProcess/API/efl/ewk_back_forward_list.cpp:132 > - addItemToWrapperCache(list, wkAddedItem); // Puts new item to the cache. > + if (wkAddedItem) > + addItemToWrapperCache(list, wkAddedItem); // Puts new item to the cache. A comment in the code makes sense
Mikhail Pozdnyakov
Comment 4 2012-08-17 01:31:47 PDT
Created attachment 159045 [details] to be landed
WebKit Review Bot
Comment 5 2012-08-17 02:25:28 PDT
Comment on attachment 159045 [details] to be landed Clearing flags on attachment: 159045 Committed r125872: <http://trac.webkit.org/changeset/125872>
WebKit Review Bot
Comment 6 2012-08-17 02:25:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.