[EFL][WK2] Getting unnecessary  EINA_SAFETY_ON_NULL_RETURN_VAL warnings while page navigation https://bugs.webkit.org/show_bug.cgi?id=94308

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-08-17
Reviewed by Kenneth Rohde Christiansen.

The reason is that loadClient.didChangeBackForwardList callback is invoked with zero
arguments which is valid case while page back-forward navigation and means basically
that the back-froward list has changed but items were not added or deleted.

* UIProcess/API/efl/ewk_back_forward_list.cpp:
(ewk_back_forward_list_changed):

Canonical link: https://commits.webkit.org/112123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125872 268f45cc-cd09-0410-ab3c-d52691b4dbfc